2006-10-15  Matthieu Nottale  <nottale@gostai.com>

	r225: Optimization: tag subsystem rewrite, memory manager rewrite 

	* ucommand.cc: .
	* ucommand.h: .
	* utypes.h: .
	* parser/bison/ugrammar.y: .
	* ufunction.cc: .
	* uexpression.cc: .
	* ufunction.h: .
	* userver.cc: .
	* userver.h: .
	* uvariablename.cc: .
	* memorymanager/blockmemorymanager.h: .
	* memorymanager/memorymanager.cc: .
	* memorymanager/memorymanager.h: .
	* uconnection.cc: .

2006-10-15  BAILLIE Jean-Christophe  <baillie@gostai.com>

	Fix indentation problems 

Indentation problems fixed in some files (using Akim's convention: to be
debated)
NB: vi option to add =>  :set tabstop=8

	* ucommand.cc: .
	* parser/bison/ugrammar.y: .
	* uexpression.cc: .
	* userver.cc: .
	* uvariablename.cc: .

2006-10-13  Matthieu Nottale  <nottale@gostai.com>

	Optimisation.

	* utypes.h: Remove eqStr (leftover).
	* uconnection.cc: Remove 4(half) useless hash map searches in execute.
	* liburbi-c++/src/liburbi/uobject/uext.h: Tsuna:BUG: this is an external item.

2006-10-12  matthieu nottale  <nottale@gostai.com>

	r222: Fix invalid iterator use.

	* network/bsdnet/network.cc: Fixed for good.

2006-10-12  matthieu nottale  <nottale@gostai.com>

	r221: Lock fix.

	* parser/uparser.cc: Remove unneccessary &*.
	* lockable.h: Lock is now a recursive mutex.
	* userver.cc: Lock server in work.
	* userver.h: UServer inherits Lockable .
	* console.cc: Add missing headers.
	* uconnection.cc: Lock server in parse.

2006-10-12  Matthieu Nottale  <nottale@gostai.com>

	Add a much needed try/catch

	* network/bsdnet/network.cc: Add a try/catch, so that when a connection is destroyed in its notifyread, the call to notifyWrite on the deleted object does not bring the ship down.
	* lockable.h: Add a temporary #error in the aibo case to ensure locks are enabled.
	* console.cc: Add missing includes time.h and sys/time.h in !windows case.

2006-10-10  matthieu nottale  <nottale@gostai.com>
